--- a/Server/Website/Diplomarbeit/website/templates/changeUserPassword.html
+++ b/Server/Website/Diplomarbeit/website/templates/changeUserPassword.html
@@ -2,7 +2,7 @@
 {% block title %}Change Username{% endblock %}
 {% block content %}
 <style>
-  /* Stildefinitionen für das Icon, das das Passwort verdeckt/zeigt */
+  /* Style definitions for the icon that shows/hides the password */
   .field-icon {
     float: right;
     margin-left: -25px;
@@ -13,13 +13,22 @@
     margin-bottom: 3px;
     cursor: pointer;
   }
+
+  form {
+    max-width: 800px;
+    margin: 30px auto;
+    background-color: rgba(255, 255, 255, 0.8); /* RGBA for transparency */
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Optional box shadow for a subtle lift */
+  }
 </style>
 
-<!-- Formular zum Ändern des Passworts -->
+<!-- Form for changing the password -->
 <form method="POST">
     <h3 align="center">Change Password</h3>
 
-    <!-- Eingabefeld für die E-Mail-Adresse -->
+    <!-- Input field for the email address -->
     <div class="form-group">
       <label for="firstName">Email</label>
       <div style="font-size: 14px" id="info_text"></div>
@@ -32,7 +41,7 @@
       />
     </div>
 
-    <!-- Eingabefeld für das vorherige Passwort -->
+    <!-- Input field for the previous password -->
     <div class="form-group">
         <label for="password">Previous Password</label>
         <input
@@ -42,11 +51,11 @@
           name="password1"
           placeholder="Old Password"
         />
-        <!-- Schaltfläche zum Ein- und Ausblenden des vorherigen Passworts -->
+        <!-- Button to toggle visibility of the previous password -->
         <span class="fa fa-fw fa-eye field-icon toggle-password1" onclick="togglePasswordVisibility1()"></span>
     </div>
 
-    <!-- Eingabefeld für das neue Passwort -->
+    <!-- Input field for the new password -->
     <div class="form-group">
       <label for="password">Password</label>
       <input
@@ -56,11 +65,11 @@
         name="password2"
         placeholder="New Password"
       />
-      <!-- Schaltfläche zum Ein- und Ausblenden des neuen Passworts -->
+      <!-- Button to toggle visibility of the new password -->
       <span class="fa fa-fw fa-eye field-icon toggle-password2" onclick="togglePasswordVisibility2()"></span>
     </div>
 
-    <!-- Eingabefeld zur Bestätigung des neuen Passworts -->
+    <!-- Input field to confirm the new password -->
     <div class="form-group">
       <label for="password2">Password (Confirm)</label>
       <input
@@ -70,17 +79,17 @@
         name="password3"
         placeholder="Confirm new password"
       />
-      <!-- Schaltfläche zum Ein- und Ausblenden der Bestätigung des neuen Passworts -->
+      <!-- Button to toggle visibility of the confirmation password -->
       <span class="fa fa-fw fa-eye field-icon toggle-password3" onclick="togglePasswordVisibility3()"></span>
     </div>
     <br />
 
-    <!-- Schaltfläche zum Ändern des Passworts -->
+    <!-- Button to change the password -->
     <button type="submit" class="btn btn-primary">Change</button>  
 </form>
 
 <script> 
-  // Funktionen zum Ein- und Ausblenden von Passwörtern
+  // Functions to toggle password visibility
   function togglePasswordVisibility1() {
     const passwordInput = document.getElementById('password1'); 
     const icon = document.querySelector('.toggle-password1');
