--- a/Server/Website/Diplomarbeit/website/templates/reset_password.html
+++ b/Server/Website/Diplomarbeit/website/templates/reset_password.html
@@ -56,14 +56,16 @@
         }
 </style>
 
-    <div style="text-align: center; margin-top: 150px;">
-        <h3>Reset Password</h3>
-        <p>Enter your email address to receive password reset instructions.</p>
-        <form action="{{ url_for('auth.send_reset_email') }}" method="post">
-            <input type="email" name="email" placeholder="E-Mail-Adresse" required>
-            <button class="button-81" type="submit" disabled>Send E-Mail</button>
-        </form>
-    </div>
+<div style="text-align: center; margin-top: 150px;">
+    <h3>Reset Password</h3>
+    <p>Enter your email address to receive password reset instructions.</p>
+    <!-- Form for submitting the email for password reset -->
+    <form action="{{ url_for('auth.send_reset_email') }}" method="post">
+        <input type="email" name="email" placeholder="E-Mail-Adresse" required>
+        <button class="button-81" type="submit" disabled>Send E-Mail</button>
+    </form>
+</div>
+
 
 
 {% endblock %}
