--- a/Server/Website/Diplomarbeit/website/templates/flagNameQuiz.html
+++ b/Server/Website/Diplomarbeit/website/templates/flagNameQuiz.html
@@ -2,10 +2,8 @@
 {% block title %}Flag Quiz{% endblock %}
 {% block content %}
 
-
 <style>
-    
-    /* Stildefinitionen für das Eingabefeld */
+    /* Style definitions for the input field */
     .input-container{
         margin-left: 25px;
         display: grid;
@@ -14,7 +12,7 @@
         gap: 20px;
     }
 
-    /* Stildefinitionen für Bilder und Nachrichten */
+    /* Style definitions for images and messages */
     .image-container,
     .message-container {
         margin-left: 20px;
@@ -24,7 +22,7 @@
         gap: 20px;
     }
 
-    /* Stildefinitionen für Eingabefelder */
+    /* Style definitions for input fields */
     input {
         width: 250px;
         color: rgb(36, 35, 42);
@@ -38,9 +36,10 @@
         box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
         background: rgb(251, 251, 251);
         transition: all 0.1s ease 0s;
-        :focus{
-            border: 2px solid rgb(124, 138, 255);
-        }
+    }
+
+    input:focus {
+        border: 2px solid rgb(124, 138, 255);
     }
 
     .error {
@@ -68,70 +67,72 @@
         user-select: none;
         -webkit-user-select: none;
         touch-action: manipulation;
-        }
-    
-        .button-81:hover {
+    }
+
+    .button-81:hover {
         background-color: #1e293b;
         color: #fff;
-        }
-    
-        @media (min-width: 768px) {
+    }
+
+    @media (min-width: 768px) {
         .button-81 {
             font-size: 1.125rem;
             padding: 1rem 2rem;
         }
-        }
-    
-        .button-81:disabled {
-            background-color: #d3d3d3;
-            color: #a0aec0;
-            cursor: not-allowed; 
-        }
-        
-        .button-81:hover:disabled {
-            background-color: #d3d3d3; 
-        }
-        
+    }
 
+    .button-81:disabled {
+        background-color: #d3d3d3;
+        color: #a0aec0;
+        cursor: not-allowed;
+    }
 
-</style> 
+    .button-81:hover:disabled {
+        background-color: #d3d3d3;
+    }
+</style>
 
 {% set laender = [land1, land2, land3, land4] %}
-<h2 style="text-align: center; margin-top: 20px"> {{ quiz_name }} </h2>
+<h2 style="text-align: center; margin-top: 20px">{{ quiz_name }}</h2>
 <h4 style="text-align: center">{{ discription }}</h4>
 <p style="color: grey; text-align: center;"> Please fill out all fields!</p>
 
-<!-- Container für die Anzeige der Bilder -->
+<!-- Container for displaying images -->
 <div class="image-container">
     {% for i in laender %}
         <div style="padding-top: 20px; text-align: center;">
-            <!-- Anzeige der Bilder für die Länder -->
+            <!-- Display images for the countries -->
             <img src="{{ url_for('static', filename=i) }}" width="250" height="140" style="border: 1px solid black; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);">
         </div>
     {% endfor %}
 </div>
 
-<!-- Container für die Eingabefelder -->
+<!-- Container for input fields -->
 <div class="input-container">
     <input type="text" id="input0">
     <input type="text" id="input1">
     <input type="text" id="input2">
     <input type="text" id="input3">
-    <button class="button-81" onclick="buttonClick()" style="with:100px">check</button> 
-    <span style="margin-left: 97%; font-size: 21px">{{session["quiz_count"]}}/5</span>
 </div>
 
-<!-- Container für die Anzeige von Nachrichten -->
+<!-- Container for displaying messages -->
 <div class="message-container">
-    <!-- Versteckte Nachrichten für jede Antwort -->
+    <!-- Hidden messages for each answer -->
     <p id="resultMessage0" style="display: none;">The right Answer would have been <b>{{land_names[0]}}</b></p>
     <p id="resultMessage1" style="display: none;">The right Answer would have been <b>{{land_names[1]}}</b></p>
     <p id="resultMessage2" style="display: none;">The right Answer would have been <b>{{land_names[2]}}</b></p>
     <p id="resultMessage3" style="display: none;">The right Answer would have been <b>{{land_names[3]}}</b></p>
 </div>
 
+<!-- Container for button and count -->
+<div class="input-container" style="margin-bottom: 120px; margin-top: 7px">
+    <button class="button-81" onclick="buttonClick()" style="width: 120px">check</button> 
+    <span style="margin-left: 97%; font-size: 21px;">{{session["quiz_count"]}}/5</span>
+</div>
+
+
 <script>
-    // JavaScript-Code für die Überprüfung der Benutzereingaben
+    // JavaScript code for checking user input
     var landNames = [
         "{{land_names[0]}}",
         "{{land_names[1]}}",
@@ -142,35 +143,35 @@
     function checkInput(i) {
         var inputElement = document.getElementById('input' + i);
         var resultMessage = document.getElementById('resultMessage' + i);
-    
+
         inputElement.disabled = true;
-    
+
         var answer = landNames[i];
         var input = inputElement.value;
-    
+
         var selectedAnswer = input.trim() === "" ? "xxx" : input.toLowerCase();
-    
+
         var correct_answer = answer.toLowerCase();
-    
+
         fetch(`/check_answer/${selectedAnswer}`, { method: 'POST', body: new URLSearchParams({ correct_answer: correct_answer }), headers: { 'Content-Type': 'application/x-www-form-urlencoded' } })
             .then(response => response.json())
             .then(data => {
                 if (data.is_correct) {
                     resultMessage.style.display = 'block';
-                    resultMessage.style.color = 'white';
+                    resultMessage.style.color = 'rgba(255, 255, 255, 0)';
                     setTimeout(refreshPage, 3000);
                 }
                 if (!data.is_correct) {
                     resultMessage.style.display = 'block'; 
                     setTimeout(refreshPage, 3000);
                 }
-    
+
                 var correctAnswersCountElement = document.getElementById('correctAnswersCount');
                 correctAnswersCountElement.innerHTML = `Anzahl der richtigen Antworten: ${data.correct_answers_count}`;
             })
             .catch(error => console.error('Error:', error));
     }
-    
+
     function refreshPage() {
         location.reload();
     }
@@ -181,8 +182,5 @@
         }
     }
 </script>
-
-
-
 
 {% endblock %}
