--- a/Server/Website/Diplomarbeit/website/templates/profileSite.html
+++ b/Server/Website/Diplomarbeit/website/templates/profileSite.html
@@ -2,6 +2,68 @@
 {% block title %}Profile Site{% endblock %}
 {% block content %}
 
+<!-- Main content of the profile page -->
+<div class="page-content page-container" id="page-content" style="margin-bottom: 60px">
+    <div class="padding">
+        <div class="row container d-flex justify-content-center">
+            <div class="col-xl-8 col-md-12">
+                <div class="card user-card-full">
+                    <div class="row m-l-0 m-r-0">
+                        <!-- Left section: User profile picture and background color -->
+                        <div class="col-sm-4 bg-c-lite-green user-profile">
+                            <div class="card-block text-center text-white">
+                                <!-- User profile picture -->
+                                <div class="m-b-25">
+                                    <img src="{{ url_for('static', filename='blank-profile-picture-973460_960_720.webp') }}" class="img-radius" height="75px">
+                                </div>
+                                <!-- User name and role -->
+                                {% set user_name_upper = user_name.upper() %}
+                                <h6 class="f-w-600">{{ user_name_upper }}</h6>
+                                <p>Normal User</p>
+                                <!-- Edit icon -->
+                                <i class="mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                            </div>
+                        </div>
+                        <!-- Right section: User information and actions -->
+                        <div class="col-sm-8">
+                            <div class="card-block">
+                                <!-- Section for general information -->
+                                <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
+                                <div class="row">
+                                    <!-- Information such as Email and Name -->
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Email</p>
+                                        <h6 class="text-muted f-w-400">{{ user_email }}</h6>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Name</p>
+                                        <h6 class="text-muted f-w-400">{{ user_name }}</h6>
+                                    </div>
+                                </div>
+                                <!-- Section for user data and actions -->
+                                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">User Data</h6>
+                                <div class="row">
+                                    <!-- Information such as Level -->
+                                    <div class="col-sm-5">
+                                        <p class="m-b-10 f-w-600">Level</p>
+                                        <h6 class="text-muted f-w-400">{{ level }}</h6>
+                                    </div>
+                                    <!-- Actions such as changing the username or password -->
+                                    <div class="col-sm-7">
+                                        <a href="{{ url_for('auth.changeUserName')}}" class="m-b-10 f-w-600" style="color: black; padding:3px;">Change User-Name</a>
+                                        <a href="{{ url_for('auth.changeUserPassword')}}" class="m-b-10 f-w-600" style="color: black; padding:3px;">Change User-Password</a>
+                                        <a href="{{ url_for('auth.deleteUser')}}" class="m-b-10 f-w-600" style="color: black; padding:3px;">Delete User</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Styling der Seite -->
 <style>
     body {
@@ -181,68 +243,4 @@
     
     
 </style>
-
-<!-- Hauptinhalt der Profilseite -->
-
-<div class="page-content page-container" id="page-content">
-    <div class="padding">
-        <div class="row container d-flex justify-content-center">
-            <div class="col-xl-8 col-md-12">
-                <div class="card user-card-full">
-                    <div class="row m-l-0 m-r-0">
-                        <!-- Linker Bereich: Benutzerprofilbild und Hintergrundfarbe -->
-                        <div class="col-sm-4 bg-c-lite-green user-profile">
-                            <div class="card-block text-center text-white">
-                                <!-- Benutzerprofilbild -->
-                                <div class="m-b-25">
-                                    <img src="{{ url_for('static', filename='blank-profile-picture-973460_960_720.webp') }}" class="img-radius" height="75px">
-                                </div>
-                                <!-- Benutzername und Rolle -->
-                                {% set user_name_upper = user_name.upper() %}
-                                <h6 class="f-w-600">{{ user_name_upper }}</h6>
-                                <p>Normal User</p>
-                                <!-- Bearbeiten-Icon -->
-                                <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
-                            </div>
-                        </div>
-                        <!-- Rechter Bereich: Benutzerinformationen und Aktionen -->
-                        <div class="col-sm-8">
-                            <div class="card-block">
-                                <!-- Abschnitt für allgemeine Informationen -->
-                                <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
-                                <div class="row">
-                                    <!-- Informationen wie Email und Name -->
-                                    <div class="col-sm-6">
-                                        <p class="m-b-10 f-w-600">Email</p>
-                                        <h6 class="text-muted f-w-400">{{ user_email }}</h6>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <p class="m-b-10 f-w-600">Name</p>
-                                        <h6 class="text-muted f-w-400">{{ user_name }}</h6>
-                                    </div>
-                                </div>
-                                <!-- Abschnitt für Benutzerdaten und Aktionen -->
-                                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">User Data</h6>
-                                <div class="row">
-                                    <!-- Informationen wie Level -->
-                                    <div class="col-sm-5">
-                                        <p class="m-b-10 f-w-600">Level</p>
-                                        <h6 class="text-muted f-w-400">{{ level }}</h6>
-                                    </div>
-                                    <!-- Aktionen wie Ändern des Benutzernamens oder Passworts -->
-                                    <div class="col-sm-7">
-                                        <a href="{{ url_for('auth.changeUserName')}}" class="m-b-10 f-w-600" style="color: black; padding:3px;">Change User-Name</a>
-                                        <a href="{{ url_for('auth.changeUserPassword')}}" class="m-b-10 f-w-600" style="color: black; padding:3px;">Change User-Password</a>
-                                        <a href="{{ url_for('auth.deleteUser')}}" class="m-b-10 f-w-600" style="color: black; padding:3px;">Delete User</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-{%endblock%}
+{% endblock %}
