--- a/Server/Website/Diplomarbeit/website/templates/singleFlagNameQuiz.html
+++ b/Server/Website/Diplomarbeit/website/templates/singleFlagNameQuiz.html
@@ -2,7 +2,7 @@
 {% block title %}Single Flag Quiz{% endblock %}
 {% block content %}
 
-<!-- Stile für die Seite -->
+<!-- Styles for the page -->
 <style>
     .image-container {
         margin: 0px auto;
@@ -13,12 +13,12 @@
         gap: 40px;
     }
 
-    .message-container{
+    .message-container {
         padding-top: 10px;
         text-align: center;
     }
 
-    input{
+    input {
         width: 400px;
         color: rgb(36, 35, 42);
         font-size: 16px;
@@ -31,73 +31,61 @@
         box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
         background: rgb(251, 251, 251);
         transition: all 0.1s ease 0s;
-        :focus{
-            border: 2px solid rgb(124, 138, 255);
-        }
         margin-left: 41%;
     }
-    
 </style>
 
-<!-- Quiz-Inhalt -->
-<h2 style="text-align: center; margin-top: 20px">{{quiz_name}}</h2>
-<h4 style="text-align: center">{{discription}}</h4>
-<p style="text-align: center; font-size: 21px">{{session["quiz_count"]}}/5</p>
+<!-- Quiz content -->
+<h2 style="text-align: center; margin-top: 20px">{{ quiz_name }}</h2>
+<h4 style="text-align: center">{{ discription }}</h4>
+<p style="text-align: center; font-size: 21px">{{ session["quiz_count"] }}/5</p>
 
-<!-- Container für Meldungen -->
+<!-- Container for messages -->
 <div class="message-container">
-    <p id="resultMessage" style="display: none;">The right Answer would have been <b>{{land_name}}</b></p>
+    <p id="resultMessage" style="display: none;">The right Answer would have been <b>{{ land_name }}</b></p>
 </div>
 
-<!-- Container für Bilder -->
+<!-- Container for images -->
 <div class="image-container">
-
-    <div style="padding-top: 30px;">
-        <!-- Anzeige des Quiz-Bildes -->
+    <div style="padding-top: 10px;">
+        <!-- Display the quiz image -->
         <img src="{{ url_for('static', filename= land ) }}" width="400" height="240" style="border: 1px solid black; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);">
     </div>
-
 </div>
 
-<!-- Eingabefeld für Benutzerantwort -->
-<input type="text" id="input" onkeydown="handleKeyDown">
+<!-- User answer input field -->
+<input type="text" id="input" onkeydown="handleKeyDown(event)" style="margin-bottom: 70px">
 
-<!-- JavaScript-Code für die Quiz-Logik -->
+<!-- JavaScript code for quiz logic -->
 <script>
-    // Funktion zum Überprüfen der Benutzereingabe
+    // Function to check user input
     function checkInput() {
         var inputElement = document.getElementById('input');
         var resultMessage = document.getElementById('resultMessage');
 
-        inputElement.disabled = true; 
-        var answer = "{{land_name}}";
+        inputElement.disabled = true;
+        var answer = "{{ land_name }}";
         var input = document.getElementById('input').value;
 
         var correct_answer = answer.toLowerCase();
         var selectedAnswer = input.toLowerCase();
 
-        // Übermittlung der Benutzerantwort an den Server und Verarbeitung der Antwort
+        // Send user answer to the server and process the response
         fetch(`/check_answer/${selectedAnswer}`, { method: 'POST', body: new URLSearchParams({ correct_answer: correct_answer }), headers: { 'Content-Type': 'application/x-www-form-urlencoded' } })
             .then(response => response.json())
             .then(data => {
-                
                 if (data.is_correct) {
-                    resultMessage.style.display = 'block';
-                    resultMessage.style.color = 'white';
                     inputElement.disable
                     setTimeout(refreshPage, 3000);
                 }
                 if (!data.is_correct) {
-                    resultMessage.style.display = 'block'; 
+                    resultMessage.style.display = 'block';
                     inputElement.disable
                     setTimeout(refreshPage, 3000);
                 }
-    
-                
-    
-                // Anzeigen der Anzahl der richtigen Antworten 
+                // Display the number of correct answers
                 var correctAnswersCountElement = document.getElementById('correctAnswersCount');
-                correctAnswersCountElement.innerHTML = `Anzahl der richtigen Antworten: ${data.correct_answers_count}`;
+                correctAnswersCountElement.innerHTML = `Number of correct answers: ${data.correct_answers_count}`;
             })
             .catch(error => console.error('Error:', error));
     }
@@ -105,12 +93,13 @@
     function handleKeyDown(event) {
         if (event.key === "Enter") {
             checkInput();
+            console.log("hallo");
         }
     }
+
     function refreshPage() {
         location.reload();
     }
 </script>
-
 
 {% endblock %}
